--- a/API/package.json
+++ b/API/package.json
@@ -4,27 +4,37 @@
   "version": "0.1.0",
   "description": "A Strapi application",
   "scripts": {
+    "build": "strapi build",
+    "console": "strapi console",
+    "deploy": "strapi deploy",
+    "dev": "strapi develop",
     "develop": "strapi develop",
     "start": "strapi start",
-    "build": "strapi build",
-    "strapi": "strapi"
+    "strapi": "strapi",
+    "upgrade": "npx @strapi/upgrade latest",
+    "upgrade:dry": "npx @strapi/upgrade latest --dry"
   },
   "dependencies": {
-    "@strapi/plugin-i18n": "4.10.6",
-    "@strapi/plugin-users-permissions": "4.10.6",
-    "@strapi/strapi": "4.10.6",
+    "@strapi/plugin-cloud": "5.16.0",
+    "@strapi/plugin-users-permissions": "5.16.0",
+    "@strapi/strapi": "^5.16.0",
     "mysql": "2.18.1",
-    "pg": "^8.11.0"
+    "mysql2": "3.9.8",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.0.0",
+    "styled-components": "^6.0.0"
   },
   "author": {
-    "name": "A Strapi developer"
+    "name": "Jesse Mwangi"
   },
   "strapi": {
-    "uuid": "60eeacc2-0c7c-4814-b030-8d5786168ace"
+    "uuid": "60eeacc2-0c7c-4814-b030-8d5786168ace",
+    "installId": "2a01724ab3daf4572d6a4590495d1dbfd1be4616c01fb2f29a09328f834b139c"
   },
   "engines": {
-    "node": ">=14.19.1 <=18.x.x",
-    "npm": ">=6.0.0"
+    "node": ">=18.0.0 <=22.x.x",
+    "npm": ">6.0.0"
   },
   "license": "MIT"
 }
