--- a/API/package.json
+++ b/API/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@strapi/plugin-cloud": "5.16.0",
     "@strapi/plugin-users-permissions": "5.16.0",
+    "@strapi/provider-upload-cloudinary": "^5.16.0",
     "@strapi/strapi": "^5.16.0",
     "mysql": "2.18.1",
     "mysql2": "3.9.8",
